# zeek-postgresql

./: CMakeLists.txt  README.md  configure
cmake/: FindPostgreSQL.cmake
scripts/: __load__.zeek
src/: Plugin.cc  Plugin.h  PostgresWriter.cc  PostgresWriter.h
